--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,18 +2,42 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="https://kit.fontawesome.com/6cc08cc3c7.js" crossorigin="anonymous" defer></script>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="index.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <body>
 <div class="mainContainer container col-ss-12 col-s-12 col-m-12 col-12 col-l-12">
+  <div class="container midLeftDash dash">
+    <div class="container dashContainer">
+    <div class="container createDiv">
+      <p onclick="getPages('/create')">
+        Create
+      </p>
+    </div>
+    <div class="container editDiv">
+      <p onclick="getPages('/edit')">
+        Edit
+      </p>
+    </div>
+    <div class="container createDiv">
+      <p onclick="getPages('/create')" style="color: rgba(255,255,255,0.5)">
+        Settings
+      </p>
+    </div>
+    <div class="container logOut">
+    <!--  <form class="container" id="logOut" action="/logout?_method=DELETE" method="POST">
+        <button type="submit" class="logOut">Log out</button>
+      </form>-->
+      <p>
+        Log out
+      </p>
+    </div>
+
+    </div>
+</div>
     <div class="container topLeftDash">
-      <div class="container menuBar" onclick="
-        document.querySelector('.midLeftDash').classList.toggle('midLeftDashActive');
-        document.querySelector('.bar1').classList.toggle('bar1Active');
-        document.querySelector('.bar2').classList.toggle('bar2Active');
-        document.querySelector('.bar3').classList.toggle('bar3Active');
-        ">
+      <div class="container menuBar">
         <!--<i class="fa fa-bars" aria-hidden="true"></i>-->
         <div class="bar bar1 col-ss-6 col-s-6 col-6 col-m-6 col-6 col-l-6"></div>
         <div class="bar bar2 col-ss-6 col-s-6 col-6 col-m-6 col-6 col-l-6"></div>
@@ -21,16 +45,6 @@
       </div>
     </div>
     <div class="container midSection">
-        <div class="container midLeftDash dash">
-          <div class="container dashContainer">
-          <div class="container createDiv">
-            <button class="createButton" onclick="getPages('/create')">Create</button>
-          </div>
-          <form class="container" id="logOut" action="/logout?_method=DELETE" method="POST">
-            <button type="submit" class="logOut">Log out</button>
-          </form>
-          </div>
-      </div>
       <div class="container recipes" id="recipes"></div>
 
   </div>
@@ -42,9 +56,28 @@
   let options = document.querySelector('.options');
   let optionsTab = document.querySelector('.optionsTab');
   let ellipsis = document.querySelector('.fa-ellipsis-v');
+  let dash = document.querySelector('.midLeftDash');
   let xClose;
   let links = document.querySelector('.links');
-
+  document.querySelector('.topLeftDash').addEventListener('click', () => {
+     document.querySelector('.bar1').classList.toggle('bar1Active');
+     document.querySelector('.bar2').classList.toggle('bar2Active');
+     document.querySelector('.bar3').classList.toggle('bar3Active');
+     dash.classList.toggle('midLeftDashActive');
+     /*if (dash.style.left != '0') {
+       dash.style.left = '0';
+     }
+     if (dash.style.left == '0'){
+       dash.style.left = '-100%';
+     }*/
+   },true)
+  document.body.addEventListener('click', (event) => {
+    if (!event.target.classList.contains('midLeftDash')) {
+      if (dash.classList.contains('midLeftDashActive')) {
+        dash.classList.remove('midLeftDashActive')
+      }
+    }
+  })
 //---Populate recipe card list-----
 
 function createCards(optionsSmaller, optionsExpand) {
@@ -101,52 +134,11 @@ function createCards(optionsSmaller, optionsExpand) {
           if (this.readyState == 4) {
             console.log(this.responseText);
           }
-          //window.location.href = "/view";
+          window.location.href = "/edit";
           //Request loads edit view
-          getPages('/edit');
+          //getPages('/edit');
           //Request populates edit view
-          let httpView = new XMLHttpRequest;
-          httpView.onload = () => {
-          if (httpView.readyState == XMLHttpRequest.DONE && httpView.status == 200) {
-            let recipe = JSON.parse(httpView.responseText);
-            console.log(recipe);
 
-            let ingredientsList = document.querySelector('.ingredientTableFinal');
-            let instructionsList = document.querySelector(".instructionsTableFinal");
-            let editsTitle = document.getElementById('editsTitle');
-            editsTitle.innerHTML = recipe.name;
-            recipe.ingredients.forEach(ingredient => {
-              const cell1 = document.createElement('td');
-              const cell2 = document.createElement('td');
-              const row = document.createElement('tr');
-              console.log(ingredient[0]);
-              cell1.innerText = ingredient[0];
-              console.log(cell1.innerHTML);
-              cell2.innerText = ingredient[1];
-              row.appendChild(cell1);
-              row.appendChild(cell2);
-              cell1.classList.add('ingredient');
-              cell2.classList.add('amount');
-              ingredientsList.appendChild(row);
-
-                cell1.contentEditable = 'true';
-                cell2.contentEditable = 'true';
-            })
-            recipe.instructions.forEach(instruction => {
-              console.log(instruction);
-              const cell3 = document.createElement('td');
-              const row = document.createElement('tr');
-              cell3.innerText = instruction;
-              cell3.classList.add('instruction');
-              row.appendChild(cell3);
-              instructionsList.appendChild(row);
-                cell3.contentEditable = 'true';
-
-            })
-          }
-          }
-          httpView.open("GET", "/getrecipe", true);
-          httpView.send();
         })
 
         trash.addEventListener("click", async (event) => {
@@ -191,10 +183,10 @@ function createCards(optionsSmaller, optionsExpand) {
           if (this.readyState == 4) {
             console.log(this.responseText);
           }
-          //window.location.href = "/view";
-          getPages('/view');
+          window.location.href = "/view";
+          //getPages('/view');
 
-          let httpView = new XMLHttpRequest;
+          /*let httpView = new XMLHttpRequest;
           httpView.onload = () => {
           if (httpView.readyState == XMLHttpRequest.DONE && httpView.status == 200) {
             let recipe = JSON.parse(httpView.responseText);
@@ -235,7 +227,7 @@ function createCards(optionsSmaller, optionsExpand) {
 
             })
           }
-          }
+        }*/
           httpView.open("GET", "/getrecipe", true);
           httpView.send();
         })
