--- a/views/styles.css
+++ b/views/styles.css
@@ -1,5 +1,69 @@
+/*----Edit page-----*/
+.main {
+  background-color: white;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  flex-direction: column;
+}
 
+.form {
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid red;
+
+}
+.happy {
+  flex-direction: column;
+}
+.table {
+  justify-content: center;
+  align-items: center;
+  width: 85%;
+}
+table {
+  border: 0.5px solid #333;
+  border-collapse: collapse;
+  margin: 2.5% 0;
+}
+th {
+  background-color: lightgrey;
+  width: 50%;
+  border: 0.5px solid #333;
+}
+td {
+  padding: 0.75%;
+  border: 0.5px solid #333;
+}
+.title {
+  justify-content: center;
+}
 /*----General----*/
+body {
+  margin: 0;
+}
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto';
+}
+.container{
+  display: flex;
+}
+table {
+  width: 100%;
+}
+.backButton {
+  cursor: pointer;
+  padding: 0.75%;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  background: rgb(70, 143, 53);
+  border-radius: 50%;
+}
+.fa-arrow-left {
+  color: white;
+}
 form {
   flex-direction: column;
   justify-content: space-around;
@@ -7,6 +71,7 @@ form {
   width: 100%;
 }
 .mainContainer {
+  position: relative;
   flex-direction: column;
   overflow: hidden;
   width: 100vw;
@@ -16,13 +81,14 @@ form {
 
 
 .topLeftDash {
-  border-radius: 100%;
+  cursor: pointer;
+  border-radius: 50%;
   z-index: 10000;
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 75px;
-  width: 75px;
+  bottom: 20px;
+  left: 20px;
+  height: 50px;
+  width: 50px;
   background-color: #333;
   align-items: center;
   justify-content: center;
@@ -30,30 +96,32 @@ form {
 
 }
 .menuBar {
-  border: 1px solid red;
-  width: 100%;
-  height: 70%;
+  width: 50px;
+  height: 25px;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
 
 .bar {
-  width: 100%;
-  height: 5px;
+  width: 25px;
+  height: 2.5px;
   color: white;
   background-color: white;
   transition: all 0.2s ease-out;
 }
 .bar1Active {
-transform: translate(0, 17px) rotate(45deg);
+transform: rotate(45deg);
+transform-origin: left;
+
 }
 .bar2Active {
 transform: translate(-1000px, 0);
 
 }
 .bar3Active {
-  transform: translate(0, -17px) rotate(-45deg);
+  transform: rotate(-45deg);
+  transform-origin: left;
 }
 
 .avatar {
@@ -86,25 +154,31 @@ button {
   position: relative;
 }
 .midLeftDash {
-  align-items: space-around;
+  align-items: flex-start;
   justify-content: center;
-  border: 1px solid green;
-  left: -100%;
+  left: -20%;
   top: 0;
-  z-index: 1000;
+  z-index: 10000000;
   position: absolute;
-  width: 100%;
+  width: 20%;
   height: 100%;
   background-color: #333;
   transition: all 0.2s;
 }
 .dashContainer {
-  width: 50%;
+  width: 100%;
   height: 60%;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
+  color: white;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.dashContainer div {
+  justify-content: center;
+  width: 50%;
+  cursor: pointer;
+  border-bottom: 1px solid rgba(255,255,255,0.5);
 }
 .midLeftDashActive {
   left: 0;
@@ -129,6 +203,7 @@ button {
 }
 .card {
   margin: 1%;
+  user-select: none;
   background-color: white;
   box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
   position: relative;
@@ -136,7 +211,7 @@ button {
 }
 
 .titleCard {
-  cursor: default;
+  cursor: pointer;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
@@ -199,6 +274,7 @@ width: 50%;
 background-color: #333;
 }
 .trash, .edit {
+  cursor: pointer;
   padding: 5%;
   margin: 5%;
   background-color: white;
@@ -214,7 +290,7 @@ background-color: #333;
 .trash:hover, .edit:hover {
   width: 30px;
   height: 30px;
-  background-color: #333;
+  background: rgb(70, 143, 53);
   color: white;
 }
 
@@ -235,19 +311,7 @@ background-color: #333;
   right: -20%;
   opacity: 1;
 }
-body {
-  margin: 0;
-}
-* {
-  box-sizing: border-box;
-  font-family: 'Roboto';
-}
-.container{
-  display: flex;
-}
-table {
-  width: 100%;
-}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 .col-ss-1 {width: 8.33%;}
